--- a/README.rdoc
+++ b/README.rdoc
@@ -27,7 +27,7 @@
   end
 
   By Default render the html without layout,
-  otherwise you can pass options[:template], options[:action], options[:partial] or options[:html] string.
+  otherwise you can pass options[:template], options[:layout], options[:action], options[:partial] or options[:html] string.
   Passing options[:msg] will pulsate a message.
 
   If block given, it will yield after facebox script, eg:
